--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,8 @@
 
     <title>May the force be with you</title>
   </head>
-  <body style="margin: 0px; padding: 0px; background-color: #151515;">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-  
   </body>
 </html>
